<resources>
    <string name="app_name">First - Degree</string>
    <string name="title_app">First Degree</string>
    <string name="title_coefficient_a">coefficient a:</string>
    <string name="title_coefficient_b">coefficient b:</string>
    <string name="title_solution">Solution</string>
    <string name="title_next">Next</string>
    <string name="title_exit">Exit</string>
    <string name="title_result">Result:</string>
    <string name="title_english">English</string>
    <string name="title_vietnamese">Vietnamese</string>
    <string name="title_french">French</string>
    <string name="title_spanish">Spanish</string>
</resources>